# localflow

./: .gitignore  .prettierignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  commitlint.config.mjs  electron-builder.yml  eslint.config.mjs  package-lock.json  package.json  playwright.config.ts  tsconfig.node.json  tsconfig.web.json  vitest.config.ts
guard/: Cargo.toml
guard/crates/lfguard/: Cargo.toml
guard/crates/lfguard/packs/: cloud.aws.toml  cloud.azure.toml  cloud.gcloud.toml  container.docker.toml  core.filesystem.toml  core.git.toml  db.mongo.toml  iac.terraform.toml
guard/crates/lfguard/src/: builtins.rs  engine.rs  lexer.rs  lib.rs  main.rs  normalize.rs  pack.rs  payload.rs  prefilter.rs  profile.rs  segment.rs  subst.rs  wrappers.rs
guard/crates/lfguard/tests/: cli.rs  corpus_aws.rs  corpus_azure.rs  corpus_chaining.rs  corpus_docker.rs  corpus_filesystem.rs  corpus_gcloud.rs  corpus_git.rs  corpus_grouping.rs  corpus_k8s.rs  corpus_mongo.rs  corpus_mysql.rs  corpus_postgres.rs  corpus_subst_arg_position.rs  corpus_sudo_and_substitution.rs  corpus_terraform.rs  corpus_tokenizer.rs  corpus_wrappers2.rs  cross_pack.rs  hook_exit.rs
guard/crates/saiifeguard/: Cargo.toml
guard/crates/saiifeguard/packs/: cloud.gcloud.toml  container.k8s.toml  db.mysql.toml  db.postgres.toml  iac.terraform.toml
guard/crates/saiifeguard/src/: builtins.rs  engine.rs  lib.rs  main.rs  normalize.rs  pack.rs  payload.rs  profile.rs  subst.rs  wrappers.rs
guard/crates/saiifeguard/tests/: cli.rs  corpus_aws.rs  corpus_azure.rs  corpus_chaining.rs  corpus_docker.rs  corpus_filesystem.rs  corpus_gcloud.rs  corpus_git.rs  (+12 more)
(+644 files in other folders)
