[package]
name = "saiifeguard"
description = "Command guard engine for saiife — blocks destructive shell commands before agents run them."
edition.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "saiifeguard"
path = "src/main.rs"

[lib]
name = "saiifeguard"
path = "src/lib.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
regex = "1"
clap = { version = "4", features = ["derive"] }
thiserror = "1"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
